plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
	id 'jacoco'
}

group = 'com.alumni'
version = '0.0.1-SNAPSHOT'
description = 'Backend API responsible for managing students, enrollments, academic profiles, and institutional data'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

checkstyle {
	toolVersion = '10.12.1'
	configFile = file("$rootDir/checkstyle.xml")
}

tasks.withType(Checkstyle).configureEach {
	reports {
		html.required = true
		xml.required = true
	}
}


jacoco {
	toolVersion = "0.8.11"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
}

test {
	useJUnitPlatform()

	if (!project.hasProperty("profile")) {
		systemProperty "spring.profiles.active", "test"
	} else {
		systemProperty "spring.profiles.active", project.getProperty("profile")
	}

	systemProperty "spring.config.import", ""
	systemProperty "spring.datasource.url", "jdbc:h2:mem:testdb"
	systemProperty "spring.datasource.username", "sa"
	systemProperty "spring.datasource.password", ""
	systemProperty "spring.datasource.driver-class-name", "org.h2.Driver"
	systemProperty "security.jwt.secret", "test-secret-key-with-at-least-32-characters"
	systemProperty "security.jwt.expiration-ms", "3600000"
}

check.dependsOn jacocoTestReport
check.dependsOn checkstyleMain

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	implementation 'org.flywaydb:flyway-core:11.20.3'
	implementation 'org.flywaydb:flyway-database-postgresql:11.20.3'

	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'org.postgresql:postgresql'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
